<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MailActivity" >

    <TextView
        android:id="@+id/feedback_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/feedback_title" />
    
    <RadioGroup
        android:id="@+id/feedback_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedback_title"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/feedback_bug_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/feedback_bug_report" />

        <RadioButton
            android:id="@+id/feedback_improvement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_improvement" />

        <RadioButton
            android:id="@+id/feedback_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_others" />
    </RadioGroup>

    <EditText
        android:id="@+id/feedback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_container"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:maxLines="10"
        android:inputType="textMultiLine"
        android:hint="@string/feedback_bug_report_default"
        android:textAppearance="?android:attr/textAppearanceSmall" >
    </EditText>

    <EditText
        android:id="@+id/feedback_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"        
        android:ems="10"
        android:maxLines="3"
        android:hint="@string/feedback_contact_default"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/feedback_submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_contact"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/feedback_submit" />

</RelativeLayout>