<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<!--     
    <item android:id="@+id/action_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/menu_search"
          android:showAsAction="always"
          android:actionViewClass="android.widget.SearchView" />    
-->
    <item
        android:id="@+id/menu_to_top"
        android:icon="@drawable/ic_navigation_to_top" 
        android:title="@string/menu_to_top"
        android:showAsAction="ifRoom" />
        <!-- android:showAsAction="ifRoom|withText" /> -->

	<item
        android:id="@+id/menu_to_bottom"
        android:icon="@drawable/ic_navigation_to_bottom" 
        android:title="@string/menu_to_bottom"
        android:showAsAction="ifRoom" />
        <!-- android:showAsAction="ifRoom|withText" /> -->
	
	<item
        android:id="@+id/menu_slideshow"
        android:icon="@drawable/ic_slideshow" 
        android:title="@string/menu_slideshow"
        android:showAsAction="ifRoom" />
        <!-- android:showAsAction="ifRoom|withText" /> -->	
	
	<item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/menu_settings"
        android:showAsAction="never" />
	
    <!-- <item
        android:id="@+id/clear_cache"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="never"
        android:title="@string/clear_cache_menu"/> -->
</menu>