<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    
<!--     <LinearLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >
        
        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_launcher" />
    
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />        "
            
        <TextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textIsSelectable="true"
            android:text="AAAAAA"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout> -->
     
     
    <RelativeLayout 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >
        
	   <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher" />
    
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />
         
        <TextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/app_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/about_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_app"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/app_connect"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </RelativeLayout>
    
    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="true" />
</RelativeLayout>